--- a/index.html
+++ b/index.html
@@ -1,27 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Ball Between Markers</title>
   <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.min.js"></script>
+  <script src="index.js" defer></script>
+  <style> body { margin: 0; overflow: hidden; } </style>
 </head>
-<body style="margin: 0; overflow: hidden;">
-
-  <input type="range" id="sizeSlider" min="0.1" max="3" step="0.1" value="1"
-         style="position: absolute; top: 10px; left: 10px; z-index: 999;" />
-
+<body>
   <a-scene embedded arjs>
-    <a-marker preset="hiro">
+
+    <!-- Kanji Marker -->
+    <a-marker id="kanjiMarker" preset="kanji">
       <a-entity
-        id="model"
-        gltf-model="mario.glb"
-        scale="0.5 0.5 0.5"
+        id="model-kanji"
+        gltf-model="black/''.glb"
         position="0 0 0"
-        rotation="0 0 0">
-      </a-entity>
+        scale="0.5 0.5 0.5"
+        animation__rotate="property: rotation; to: 0 360 0; loop: true; dur: 5000"
+      ></a-entity>
     </a-marker>
+
+    <!-- Hiro Marker -->
+    <a-marker id="hiroMarker" preset="hiro">
+      <a-entity
+        id="model-hiro"
+        gltf-model="red.glb"
+        position="0 0 0"
+        scale="0.4 0.4 0.4"
+        animation__bounce="property: position; dir: alternate; dur: 1000; easing: easeInOutQuad; loop: true; to: 0 0.3 0"
+      ></a-entity>
+    </a-marker>
+
+    <!-- Ball entity -->
+    <a-sphere id="ball" radius="0.1" color="red" visible="false"></a-sphere>
+
     <a-entity camera></a-entity>
   </a-scene>
-
-  <script src="index.js"></script>
 </body>
 </html>
