--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
       <a-box color="green" depth="0.1" height="1" width="1" position="0 0.5 0"></a-box>
     </a-marker>
 
+    <!-- Maker as net -->
+    <a-marker id="netMarker" type="barcode" value="100">
+      <a-plane width="2" height="0.3" color="white" position="0 0.7 0" material="opacity: 0.5;"></a-plane>
+    </a-marker>
+
     <!-- Ball -->
     <a-sphere id="ball" radius="0.1" color="red" visible="false"></a-sphere>
 
