--- a/index.html
+++ b/index.html
@@ -1,33 +1,63 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>AR Ping Pong</title>
+  <title>AR GLB Model Viewer</title>
+  <!-- A-Frame (newer version to support gltf-model properly) -->
   <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+  <!-- AR.js for A-Frame -->
   <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.min.js"></script>
+  <!-- Your JS file -->
   <script src="index.js" defer></script>
-  <style>body { margin: 0; overflow: hidden; }</style>
+  <style>
+    #sizeSlider {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      z-index: 999;
+    }
+  </style>
 </head>
-<body>
+<body style="margin: 0; overflow: hidden;">
+  <!-- Range input to control model scale -->
+  <!-- <input type="range" id="sizeSlider" min="0.1" max="3" step="0.1" value="0.5" /> -->
+
   <a-scene embedded arjs>
 
-    <!-- Kanji Marker -->
-    <a-marker id="kanjiMarker" preset="kanji">
-      <a-box color="blue" depth="0.1" height="1" width="1" position="0 0.5 0"></a-box>
+    <a-marker preset="kanji">
+      <a-entity
+        id="tennis-racket-1"
+        gltf-model="3D_Objects/racket.glb"
+        scale="0.2 0.2 0.2"
+        position="0 -20 5"
+        rotation="0 90 0"
+        ></a-entity>
+      <a-entity
+        id="tennis-ball"
+        gltf-model="3D_Objects/tennis-ball.glb"
+        scale="3 3 3"
+        position="0 -20 3"
+        rotation="0 0 0"
+        ></a-entity>
+      <a-entity
+        id="tennis-court"
+        gltf-model="3D_Objects/court.glb"
+        scale="0.4 0.4 0.4"
+        position="0 -20 10"
+        rotation="-90 0 0"
+      ></a-entity>
     </a-marker>
 
-    <!-- Hiro Marker -->
-    <a-marker id="hiroMarker" preset="hiro">
-      <a-box color="green" depth="0.1" height="1" width="1" position="0 0.5 0"></a-box>
-    </a-marker>
+     <a-marker preset="hero">
+      <a-entity
+        id="tennis-racket-2"
+        gltf-model="3D_Objects/racket.glb"
+        scale="0.1 0.1 0.1"
+        position="0 0 0"
+        rotation="0 90 90"
+        ></a-entity>
+     </a-marker>
 
-    <!-- Maker as net -->
-    <a-marker id="netMarker" type="barcode" value="100">
-      <a-plane width="2" height="0.3" color="white" position="0 0.7 0" material="opacity: 0.5;"></a-plane>
-    </a-marker>
-
-    <!-- Ball -->
-    <a-sphere id="ball" radius="0.1" color="red" visible="false"></a-sphere>
-
+    <!-- Camera for AR scene -->
     <a-entity camera></a-entity>
   </a-scene>
 </body>
