--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
   <!-- AR.js for A-Frame -->
   <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
   <!-- Your JS file -->
   <script src="index.js" defer></script>
   <style>
@@ -22,7 +23,9 @@
   <!-- <input type="range" id="sizeSlider" min="0.1" max="3" step="0.1" value="0.5" /> -->
 
   <a-scene embedded arjs>
-
+  <a-assets>
+    <audio id="cheer-sound" src="cheer.mp3" preload="auto"></audio>
+  </a-assets>
     <a-marker preset="kanji">
       <a-entity
         id="tennis-racket-1"
@@ -44,6 +47,16 @@
         scale="0.4 0.4 0.4"
         position="0 -20 10"
         rotation="-90 0 0"
+      ></a-entity>
+        <a-entity
+        id="spectator"
+        gltf-model="3D_Objects/people.glb"
+        scale="0.3 0.3 0.3"
+        position="0 0 0"
+        rotation="-90 0 0"
+        animation-mixer="clip: *; loop: repeat"
+        sound="src: #cheer-sound; volume: 1;"
+        class="clickable"
       ></a-entity>
     </a-marker>
 
