--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
         position="0 0 0"
         rotation="0 0 0">
       </a-entity>
+      <a-entity
+        id="tennis-court"
+        gltf-model="3D_Objects/court.glb"
+        scale="0.4 0.4 0.4"
+        position="0 -20 10"
+        rotation="-90 0 0"
+      ></a-entity>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
