--- a/index.html
+++ b/index.html
@@ -1,27 +1,52 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.min.js"></script>
-</head>
-<body style="margin: 0; overflow: hidden;">
+  <head>
+    <!-- Include A-Frame library -->
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
 
-  <input type="range" id="sizeSlider" min="0.1" max="3" step="0.1" value="1"
-         style="position: absolute; top: 10px; left: 10px; z-index: 999;" />
+    <!-- Include AR.js library for augmented reality functionality -->
+    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.min.js"></script>
+  </head>
+  <body style="margin: 0; overflow: hidden">
+    <!-- Slider to adjust the size of the 3D model -->
+    <input
+      type="range"
+      id="sizeSlider"
+      min="0.1"
+      max="3"
+      step="0.1"
+      value="1"
+      style="position: absolute; top: 10px; left: 10px; z-index: 999"
+    />
 
-  <a-scene embedded arjs>
-    <a-marker preset="hiro">
-      <a-entity
-        id="model"
-        gltf-model="mario.glb"
-        scale="0.5 0.5 0.5"
-        position="0 0 0"
-        rotation="0 0 0">
-      </a-entity>
-    </a-marker>
-    <a-entity camera></a-entity>
-  </a-scene>
+    <!-- A-Frame scene with AR.js integration -->
+    <a-scene embedded arjs>
+      <!-- Marker for AR.js (using the "hiro" preset) -->
+      <a-marker preset="hiro">
+        <!-- 3D model entity -->
+        <!-- The model is loaded from a GLTF file -->
+        <!-- scaled, positioned, and rotated relative to the marker -->
+        <a-entity
+          id="model"
+          gltf-model="mario.glb"
+          <!--
+          Path
+          to
+          the
+          3D
+          model
+          file
+          --
+        >
+          scale="0.5 0.5 0.5" position="0 0 0" rotation="0 0 0">
+        </a-entity>
+      </a-marker>
 
-  <script src="index.js"></script>
-</body>
+      <!-- Camera entity for AR.js -->
+      <a-entity camera></a-entity>
+    </a-scene>
+
+    <!-- External JavaScript file for additional functionality -->
+    <script src="index.js"></script>
+  </body>
 </html>
