--- a/index.html
+++ b/index.html
@@ -2,27 +2,60 @@
 <html>
 <head>
   <title>AR GLB Model Viewer</title>
-  <!-- A-Frame (newer version to support gltf-model properly) -->
+  <!-- A-Frame -->
   <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
   <!-- AR.js for A-Frame -->
   <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.min.js"></script>
   <!-- Your JS file -->
-  <script src="index.js" defer></script>
+  <script>
+    AFRAME.registerComponent('tennis-game', {
+  schema: {},
+  init: function () {
+    this.ball = document.querySelector('#tennis-ball');
+    this.racket1 = document.querySelector('#tennis-racket-1'); // Main player (kanji marker)
+    this.racket2 = document.querySelector('#tennis-racket-2'); // Opponent (hero marker)
+    
+    this.direction1 = 1; // 1 = forward, -1 = back
+
+    this.direction = 1; // 1 = forward, -1 = back
+    this.speed = 0.1;
+  },
+
+  tick: function () {
+    if (!this.ball) return;
+
+    // Get ball's current position
+    let pos = this.ball.getAttribute('position');
+
+    // Move along z-axis
+    pos.y += this.direction * this.speed;
+
+    // Reverse direction at bounds (tweak these as needed)
+    if (pos.y >= 4) this.direction = -1;
+    if (pos.y <= -12) this.direction = 1;
+
+    // Apply new position
+    this.ball.setAttribute('position', pos);
+
+    let move1 = this.racket1.getAttribute('position');
+
+    move1.x += this.direction1 * Math.random() * 0.1;
+    if ( move1.x >= 4) this.direction1 = -1;
+    if ( move1.x <= -4) this.direction1 = 1;
+
+    this.racket1.setAttribute('position', move1);
+  }
+});
+
+  </script>
   <style>
-    #sizeSlider {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      z-index: 999;
-    }
+    body { margin: 0; overflow: hidden; }
   </style>
 </head>
-<body style="margin: 0; overflow: hidden;">
-  <!-- Range input to control model scale -->
-  <!-- <input type="range" id="sizeSlider" min="0.1" max="3" step="0.1" value="0.5" /> -->
-
+<body>
   <a-scene embedded arjs>
 
+    <!-- Marker for racket 1 and ball -->
     <a-marker preset="kanji">
       <a-entity
         id="tennis-racket-1"
@@ -30,14 +63,16 @@
         scale="0.2 0.2 0.2"
         position="0 -20 5"
         rotation="0 90 0"
-        ></a-entity>
+      ></a-entity>
+
       <a-entity
         id="tennis-ball"
         gltf-model="3D_Objects/tennis-ball.glb"
         scale="3 3 3"
         position="0 -20 3"
         rotation="0 0 0"
-        ></a-entity>
+      ></a-entity>
+
       <a-entity
         id="tennis-court"
         gltf-model="3D_Objects/court.glb"
@@ -47,17 +82,21 @@
       ></a-entity>
     </a-marker>
 
-     <a-marker preset="hero">
+    <!-- Marker for racket 2 -->
+    <a-marker preset="hero">
       <a-entity
         id="tennis-racket-2"
         gltf-model="3D_Objects/racket.glb"
         scale="0.1 0.1 0.1"
         position="0 0 0"
         rotation="0 90 0"
-        ></a-entity>
-     </a-marker>
+      ></a-entity>
+    </a-marker>
 
-    <!-- Camera for AR scene -->
+    <!-- Ball movement logic activation -->
+    <a-entity tennis-game></a-entity>
+
+    <!-- AR camera -->
     <a-entity camera></a-entity>
   </a-scene>
 </body>
